<resources>
    <string name="app_name">presentlogolib</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="err_no_songs_found">No Songs Found</string>
    <string name="err_no_songs_selected">No Songs Selected</string>
    <string name="err_no_albums_found">No Albums Found</string>
    <string name="remove_from_playlist">Removed from playlist</string>
    <string name="song_add_to_playlist">Song add to playlist -</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="err_no_playlist_found">No Playlist Found</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="remove_playlist">Playlist removed</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="add">ADD</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="songs">Songs</string>
    <string name="image_content">image</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="artist">Artist</string>
    <string name="albums">Albums</string>
    <string name="share_song">Share Song</string>
    <string name="listening">I am listening</string>
    <string name="err_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="title">Title</string>
    <string name="err_no_artist_found">No Artist Found</string>
    <string name="add_to_queue">Add to Queue</string>


    <string name="tab_text_1">Songs</string>
    <string name="tab_text_2">Playlists</string>
    <string name="tab_text_3">Artist</string>
    <string name="tab_text_4">Albums</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>
    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>
    <string name="set_as_noti">Set As Notificaiton tone</string>
    <string name="set_as_alarm">Set As Alarm tone</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="noti_set">Notification tone set</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="edit">Edit</string>

    <string name="delete">Delete</string>
    <string name="setas">SetAs</string>
    <string name="playlist">Playlist</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="search">Search</string>
    <string name="file_deleted">File Deleted</string>
    <string name="sure_delete">Are you sure you want to delete this song?</string>
    <string name="sure_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="err_internet_not_conn">Internet Not Connected</string>
    <string name="no_songs_to_add_queue">No songs available to add to queue</string>
    <string name="queue_updated">Queue Updated</string>
    <string name="off_add_qeue_alert">Current online songs will be remove from the queue</string>
    <string name="add_songs">Add songs</string>
    <string name="recently_played">Recently Played</string>
    <string name="recent">Recent</string>
    <string name="selected">Selected</string>
    <string name="select_song">Please select song</string>
    <string name="local_songs">Local songs</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="added_fav">Added to fav</string>
    <string name="description">description</string>
    <string name="already_download">Ya ha sido descargado</string>
    <string name="admob_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="alsoin">Siguiente...</string>
    <string name="caninterest">Te pueden interesar</string>
    <string name="update_dialog_title">¡Actualización nueva!</string>
    <string name="update_dialog_desc">Hay una nueva actualización disponible, errores arreglados, nuevas cosas y demás</string>
    <string name="installit">Descargar e instalar</string>

    <!--  COLORS -->


    <integer-array name="pocket_bar_colors">
        <item>@color/gplus_color_1</item>
        <item>@color/gplus_color_2</item>
        <item>@color/gplus_color_3</item>
        <item>@color/gplus_color_4</item>
    </integer-array>
    <color name="ripple">#d9dadb</color>

    <color name="black20">#20000000</color>
    <color name="white80">#80ffffff</color>
    <color name="black40">#40000000</color>
    <color name="gplus_color_1">#3e802f</color>
    <color name="gplus_color_2">#f4b400</color>
    <color name="gplus_color_3">#427fed</color>
    <color name="gplus_color_4">#b23424</color>
    <color name="colorPrimary">#F44336</color>
    <color name="colorPrimaryDark">#D32F2F</color>
    <color name="colorAccent">#FFEB3B</color>
    <color name="grey">#878787</color>

    <color name="greys">#B9B9B9</color>
    <color name="text_title">#323232</color>
    <color name="bg">#F6F7F8</color>
    <color name="text_desc">#878787</color>
    <color name="text_duration">#404040</color>
    <color name="line">#d9dadb</color>
    <color name="orange">#f99120</color>
    <color name="black">#000000</color>
    <color name="black80">#80000000</color>
    <color name="white">#ffffff</color>





    <!-- STYLE -->

    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
        <!-- Customize your theme here. -->
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
        <item name="android:windowActionBarOverlay">true</item>
    </style>


    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
        <item name="colorAccent">@color/white</item>
    </style>

    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />


    <style name="DialogAnimation">
        <item name="android:windowEnterAnimation">@anim/slide_up_dialog</item>
        <item name="android:windowExitAnimation">@anim/slide_down_dialog</item>
    </style>


    <style name="RatingBar" parent="Widget.AppCompat.RatingBar.Small">
        <item name="colorControlNormal">@color/black</item>
        <item name="colorControlActivated">@color/orange</item>
    </style>

    <style name="RatingBar_black" parent="Widget.AppCompat.RatingBar.Small">
        <item name="colorControlNormal">@color/black</item>
        <item name="colorControlActivated">@color/orange</item>
    </style>

    <style name="RatingBar_normal" parent="Theme.AppCompat">
        <item name="colorControlNormal">@color/black</item>
        <item name="colorControlActivated">@color/orange</item>
    </style>

    <style name="ThemeDialog" parent="@style/Theme.AppCompat.Light.NoActionBar">
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowIsFloating">true</item>
    </style>

    <style name="MySeekBarTheme" parent="Widget.AppCompat.SeekBar">
        <item name="colorAccent">@color/colorPrimary</item>
    </style>


    <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
        <item name="sv_backgroundColor">#DD424342</item>
        <item name="sv_showcaseColor">#424342</item>
        <item name="sv_buttonText">Hide</item>
        <item name="sv_tintButtonColor">false</item>
        <item name="sv_titleTextAppearance">@style/CustomTitle</item>
        <item name="sv_detailTextAppearance">@style/CustomText</item>
    </style>

    <style name="CustomTitle" parent="TextAppearance.ShowcaseView.Title">
        <!--<item name="android:textColor">#C1B098</item>-->
        <item name="android:textColor">#FFA036</item>
    </style>

    <style name="CustomText" parent="TextAppearance.ShowcaseView.Detail.Light">
        <item name="android:textColor">#FFFFFF</item>
    </style>

    <style name="CustomSwitch" parent="Theme.AppCompat.Light">
        <!-- active thumb & track color (30% transparency) -->
        <item name="colorControlActivated">#FFFFFF</item>

        <!-- inactive thumb color -->
        <item name="colorSwitchThumbNormal">#565656</item>

        <!-- inactive track color (30% transparency) -->
        <item name="android:colorForeground">#383838</item>
    </style>

</resources>
