<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">
<LinearLayout
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_dialog_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_dialog_desc"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/installit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/greys"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp">

        <TextView
            android:id="@+id/texting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:gravity="center"
            android:text="@string/installit"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
</androidx.cardview.widget.CardView>