<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentssec.MusicFragment">


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <!--<include-->
        <!--layout="@layout/app_bar_main"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

        <com.sothree.slidinguppanel.SlidingUpPanelLayout
            android:id="@+id/sliding_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            sothree:umanoDragView="@+id/dragView"
            sothree:umanoOverlay="false"
            sothree:umanoPanelHeight="65dp"
            sothree:umanoShadowHeight="4dp">

            <!-- MAIN CONTENT -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="45dp"
                android:layout_height="match_parent">
                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.AppBarOverlay">



                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tabIndicatorColor="@color/colorPrimary"
                        app:tabIndicatorHeight="4dp"
                        app:tabMode="scrollable"
                        app:tabPaddingStart="25dp"
                        app:tabPaddingEnd="25dp"
                        android:background="@color/white"
                        app:tabTextColor="@color/text_title"
                        app:tabSelectedTextColor="@color/colorPrimary">

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_text_1" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabItem2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_text_2" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabItem3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_text_3" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabItem4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_text_4" />

                    </com.google.android.material.tabs.TabLayout>

                </com.google.android.material.appbar.AppBarLayout>

                <androidx.viewpager.widget.ViewPager
                    android:layout_marginTop="5dp"
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/appbar"

                    />

            </RelativeLayout>

            <!-- SLIDING LAYOUT -->

            <include
                android:id="@+id/ss"
                layout="@layout/layout_music_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</FrameLayout>